text align center fix

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ one {
 Footer {
 	margin: 50px;
 	background-color: #000000;
-	text-align: left;
+	text-align: center;
 	text-decoration: none;
 
 }
